--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-scripts": "3.1.1"
   },
   "scripts": {
+	"dev:server": "json-server --watch database.json",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -27,5 +28,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "json-server": "^0.15.1"
   }
 }
